fixing css bugs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,7 +57,7 @@ label{
     margin-bottom: .5rem;
 }
 
-#sl-1, #sl-2{
+#yy, #zz{
     height: calc(1.55em + 1rem + 2px);
     padding: .5rem 6.3rem;
     font-size: 1.25rem;
