linking buttons and style them

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,7 +98,12 @@ footer{
 #git{
     display: flex;
     justify-content: center;
+    color: white;
     margin: 0;
+}
+
+#names {
+    color:white;
 }
 
 #copyright{
