--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     border-style: none;
     min-height: 100vh;
-
+    background-color:rgba(128, 255, 0, 0.103);
     display: flex;
     flex-direction: column;
 }
